# selenium-mcp

./: .gitignore  Dockerfile  README.md  mlc_config.json  pyproject.toml  requirements.txt  server.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
charts/selenium-mcp/: Chart.yaml  README.md  values.yaml
charts/selenium-mcp/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
examples/: basic_usage.py  test_with_browserless.py
tests/: conftest.py  test_authentication.py  test_server.py
