[project]
name = "selenium-mcp-server"
version = "0.1.0"
description = "Selenium MCP Server for browserless deployments"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

dependencies = [
    {name = "fastmcp", version = "^1.0.0"},
    {name = "selenium", version = "^4.15.0"},
    {name = "httpx", version = "^0.27.0"},
    {name = "websockets", version = "^12.0"},
    {name = "aiofiles", version = "^23.2.0"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4,<8.0.0",
    "pytest-asyncio>=0.23.8,<0.24.0",
    "ruff>=0.1.15,<0.2.0",
    "black>=24.0.0"
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B", "C", "N", "UP", "YTT"]
ignore = ["E501"]

[tool.ruff.lint]
per-file-ignores = { "tests/**/*.py" = ["S101", "E402"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.black]
line-length = 88
target-version = ['py313']

[project.scripts]
selenium-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]


